--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <!-- My CSS -->
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         
-        <script src="assets/scripts/jquery.js" defer></script>
+        <script src="resources/scripts/jquery.js" defer></script>
+        <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js" defer></script>
+        <!-- Moment.js Reference -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
         <script src="resources/scripts/app.js" defer></script>
 
         <title>Train Scheduler</title>
@@ -43,12 +46,12 @@
 
                         <div class="col">
                             <label for="timeInput">First Train Time:</label><br>
-                            <input placeholder="HH:mm..." type="number" class="inputBoxStyle" id="timeInput">
+                            <input placeholder="HH:mm..." type="text" class="inputBoxStyle" id="timeInput">
                         </div>
 
                         <div class="col">
                             <label for="frequencyInput">Frequency:</label><br>
-                            <input placeholder="min..." type="number" class="inputBoxStyle" id="frequencyInput">
+                            <input placeholder="min..." type="text" class="inputBoxStyle" id="frequencyInput">
                         </div>
                     </div>
                     
@@ -63,7 +66,7 @@
             <h2 class="h2Style">Current Train Schedule</h2>
 
             <div class="contentTableStyle">
-                <table class="table table-hover">
+                <table class="table table-hover" id="trainTable">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col">Train Name</th>
