--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <title>Train Scheduler</title>
     </head>
     <body>
+        <!-- <div class="main-container"> -->
         <section class="trainSchedulerStyle">
             <h1 id="logo"><i class="fa fa-train" aria-hidden="true"></i> Train Scheduler</h1>
 
@@ -34,22 +35,22 @@
 
                 <form class="container">
                     <div class="row inputRowStyle">
-                        <div class="col">
+                        <div>
                             <label for="trainNameInput">Train Name:</label><br>
                             <input placeholder="BART..." type="text" class="inputBoxStyle" id="trainNameInput">
                         </div>
 
-                        <div class="col">
+                        <div>
                             <label for="destinationInput">Destination:</label><br>
                             <input placeholder="San Francisco..." type="text" class="inputBoxStyle" id="destinationInput">
                         </div>
 
-                        <div class="col">
+                        <div>
                             <label for="timeInput">First Train Time:</label><br>
                             <input placeholder="HH:mm..." type="text" class="inputBoxStyle" id="timeInput">
                         </div>
 
-                        <div class="col">
+                        <div>
                             <label for="frequencyInput">Frequency:</label><br>
                             <input placeholder="min..." type="text" class="inputBoxStyle" id="frequencyInput">
                         </div>
@@ -71,8 +72,8 @@
                         <tr>
                             <th scope="col">Train Name</th>
                             <th scope="col">Destination</th>
-                            <th scope="col">Frequency</th>
                             <th scope="col">Next Arrival</th>
+                            <th scope="col">Frequency</th>
                             <th scope="col">Minutes Away</th>
                         </tr>
                     </thead>
@@ -82,7 +83,7 @@
             </div>
 
         </section>
-        
+    <!-- </div></div> -->
     
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
