--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="resources/scripts/jquery.js" defer></script>
         <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js" defer></script>
         <!-- Moment.js Reference -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
         <script src="resources/scripts/app.js" defer></script>
 
         <title>Train Scheduler</title>
@@ -26,7 +26,10 @@
     <body>
         <!-- <div class="main-container"> -->
         <section class="trainSchedulerStyle">
-            <h1 id="logo"><i class="fa fa-train" aria-hidden="true"></i> Train Scheduler</h1>
+            <header>
+                <h1 id="logo"><i class="fa fa-train" aria-hidden="true"></i> Train Scheduler</h1>
+                <div id="clock"></div>
+            </header>
 
             <div class="addTrainStyle">
                 <div class="addTrainSpanStyle">
@@ -72,8 +75,9 @@
                         <tr>
                             <th scope="col">Train Name</th>
                             <th scope="col">Destination</th>
-                            <th scope="col">Next Arrival</th>
                             <th scope="col">Frequency</th>
+                            <th scope="col">First Arrival</th>
+                            <th scope="col">Next Arrival</th>
                             <th scope="col">Minutes Away</th>
                         </tr>
                     </thead>
