added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
                     <span>Add Train</span>
                 </div>
 
-                <form class="container">
+                <form class="container formContainer">
                     <div class="row inputRowStyle">
                         <div>
-                            <label for="trainNameInput">Train Name:</label><br>
+                            <label for="trainNameInput" class="labelStyle">Train Name:</label><br>
                             <input placeholder="BART..." type="text" class="inputBoxStyle" id="trainNameInput">
                         </div>
 
                         <div>
-                            <label for="destinationInput">Destination:</label><br>
+                            <label for="destinationInput" class="labelStyle">Destination:</label><br>
                             <input placeholder="San Francisco..." type="text" class="inputBoxStyle" id="destinationInput">
                         </div>
 
                         <div>
-                            <label for="timeInput">First Train Time:</label><br>
+                            <label for="timeInput" class="labelStyle">First Train Time:</label><br>
                             <input placeholder="HH:mm..." type="text" class="inputBoxStyle" id="timeInput">
                         </div>
 
                         <div>
-                            <label for="frequencyInput">Frequency:</label><br>
+                            <label for="frequencyInput" class="labelStyle">Frequency:</label><br>
                             <input placeholder="min..." type="text" class="inputBoxStyle" id="frequencyInput">
                         </div>
                     </div>
