--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
                     <div class="row inputRowStyle">
                         <div>
                             <label for="trainNameInput" class="labelStyle">Train Name:</label><br>
-                            <input placeholder="BART..." type="text" class="inputBoxStyle" id="trainNameInput">
+                            <input placeholder="enter train name" type="text" class="inputBoxStyle" id="trainNameInput">
                         </div>
 
                         <div>
                             <label for="destinationInput" class="labelStyle">Destination:</label><br>
-                            <input placeholder="San Francisco..." type="text" class="inputBoxStyle" id="destinationInput">
+                            <input placeholder="enter destination" type="text" class="inputBoxStyle" id="destinationInput">
                         </div>
 
                         <div>
                             <label for="timeInput" class="labelStyle">First Train Time:</label><br>
-                            <input placeholder="HH:mm..." type="text" class="inputBoxStyle" id="timeInput">
+                            <input placeholder="00:00 AM/PM" type="text" class="inputBoxStyle" id="timeInput">
                         </div>
 
                         <div>
                             <label for="frequencyInput" class="labelStyle">Frequency:</label><br>
-                            <input placeholder="min..." type="text" class="inputBoxStyle" id="frequencyInput">
+                            <input placeholder="in minutes" type="text" class="inputBoxStyle" id="frequencyInput">
                         </div>
                     </div>
                     
